<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="">
          <menu>
              <group android:checkableBehavior="single">
              <item
                  android:id="@+id/back_to_application"
                  android:title="@string/back_to_application"
                  android:icon="@drawable/ic_outline_chevron_left_24"/>

              </group>
          </menu>
      </item>
    <item android:title="@string/communicate">
          <menu>
              <group android:checkableBehavior="single">
              <item
                  android:id="@+id/nav_share"
                  android:title="@string/share"
                  android:icon="@drawable/ic_outline_share_24"/>
              <item
                  android:id="@+id/nav_rate_us"
                  android:title="@string/rate_us"
                  android:icon="@drawable/ic_outline_star_half_24"/>
              <item
                  android:id="@+id/nav_comment"
                  android:title="@string/comment_this_app"
                  android:icon="@drawable/ic_outline_insert_comment_24"/>
              </group>
          </menu>
      </item>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_apk"
                    android:title="@string/All_our_applications"
                    android:icon="@drawable/ic_outline_cloud_download_24" />
                <item
                    android:id="@+id/nav_donate"
                    android:title="@string/donate_no_more_publicity"
                    android:icon="@drawable/ic_outline_money_24"/>
                <item
                    android:id="@+id/nav_info"
                    android:title="@string/information"
                    android:icon="@drawable/ic_outline_info_24"/>
            </group>
        </menu>
    </item>



</menu>